[tool.poetry]
name = "hw-2"
version = "0.1.0"
description = ""
authors = ["OlhaVerbova <137227019+OlhaVerbova@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
redis = "^5.0.1"
celery = "^5.3.6"
faker = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
